# review-council

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  review.py  start.sh
.github/workflows/: review-council.yml
backend/: config.py  council.py  diff_analyzer.py  github_integration.py  llm_client.py  main.py  storage.py
backend/rules/: __init__.py
frontend/: index.html
frontend/src/: App.jsx  api.js
frontend/src/components/: ReviewInterface.css  ReviewInterface.jsx  Sidebar.css  Sidebar.jsx  Stage1.jsx  Stage2.jsx  Stage3.css  Stage3.jsx
